# lpchecksum

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: checksum_ivt.h  lpcc_log.h
src/: checksum_ivt.c  lpcc_log.c  main.c
